Fix KIO app-slave connection breaking if appName contains a '/'.

+ improved error handling when KIO can't set up the socket for app-slave communication.
(no point in launching a kioslave with an empty socket as argument, which will then
assert with a confusing message about unknown protocol "")

BUG: 357499